--- a/qt5qml/src/ffi/qffi_impl_template.rs.j2
+++ b/qt5qml/src/ffi/qffi_impl_template.rs.j2
@@ -5,7 +5,7 @@ use super::qffi::*;
 
 {% for name, cls in classes.items() -%}
 
-{% if cls.default_ctor -%}
+{%- if cls.default_ctor %}
 impl {{ name }} {
     #[inline]
     pub fn new() -> Self {
@@ -22,18 +22,25 @@ impl Default for {{ name }} {
         {{ name }}::new()
     }
 }
-{%- endif %}
+{% endif -%}
 
-{% if cls.dtor -%}
+{% if cls.generate_dtor %}
 impl Drop for {{ name }} {
     #[inline]
     fn drop(&mut self) {
         unsafe { qffi_{{ name }}_destroy(self) }
     }
 }
-{%- endif %}
+{% elif cls.qobject %}
+impl Drop for {{ name }} {
+    #[inline]
+    fn drop(&mut self) {
+        unsafe { qffi_QObject_destroy(self as *mut _ as *mut crate::core::QObject) }
+    }
+}
+{% endif -%}
 
-{% if cls.copy_ctor -%}
+{%- if cls.copy_ctor %}
 impl Clone for {{ name }} {
     #[inline]
     fn clone(&self) -> Self {
@@ -44,9 +51,9 @@ impl Clone for {{ name }} {
         }
     }
 }
-{%- endif %}
+{% endif -%}
 
-{% if cls.eq -%}
+{%- if cls.eq %}
 impl PartialEq for {{ name }} {
     #[inline]
     fn eq(&self, other: &Self) -> bool {
@@ -54,9 +61,9 @@ impl PartialEq for {{ name }} {
     }
 }
 impl Eq for {{ name }} { }
-{%- endif %}
+{% endif -%}
 
-{% if cls.ord -%}
+{%- if cls.ord %}
 impl PartialOrd for {{ name }} {
     #[inline]
     fn partial_cmp(&self, other: &Self) -> Option<Ordering> {
@@ -75,6 +82,6 @@ impl Ord for {{ name }} {
         }
     }
 }
-{%- endif %}
+{% endif -%}
 
 {%- endfor %}
