--- a/qt5qml/src/ffi/qffi_template.hpp.j2
+++ b/qt5qml/src/ffi/qffi_template.hpp.j2
@@ -13,6 +13,11 @@
 #define QFFI_CLASSNAME(cls) Qffi_ ## cls
 #endif
 
+{%- if prelude %}
+
+{{ prelude }}
+{% endif %}
+
 {% for name, cls in classes.items() -%}
 {%- if cls.overwrite_name -%}
 {%- set cls_name = name -%}
